Update instructions to run JMH performance tests